<resources>
    <string name="app_name">KP2A NFC</string>

    <string name="write_pwd">Write NFC Tag with password</string>
    <string name="action_settings">Settings</string>
    <string name="write_keyfile">Write NFC Tag with Keyfile</string>
    <string name="write_both">Write password AND keyfile to NFC Tags (2 required)</string>
    <string name="title_activity_create_pwd_tag">Create password tag</string>

    <string name="hello_world">Hello world!</string>
    <string name="path">Database path:</string>
    <string name="pwd">Password:</string>
    <string name="instant">Unlock instantly</string>
    <string name="start_write">Write it!</string>
    <string name="empty_path">File path is empty!</string>
    <string name="verify">Verify or copy</string>
    <string name="keyfile">KeyFile (optional): </string>
    <string name="kp2a_nonet">keepass2android.keepass2android_nonet</string>
    <string name="kp2a">keepass2android.keepass2android</string>
    <string name="title_activity_verify">Verify a tag</string>
    <string name="searching">Searching for NFC tag...</string>
    <string name="pwd_decrypted">Password decrypted</string>
    <string name="kp2a_app">Keepass App:</string>
    <string name="tag_found">NFC tag found: </string>
</resources>
